--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		<div class="row">
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
-				<p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 21:30</strong></p>
+				<p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 22:30</strong></p>
 				<p>Prendi l'asporto e consumalo ai tavoli in esterno. <br>Ordina una birra, un bicchiere di vino o uno spritz e goditi i fantastici tramonti di Ca' Vecchia.</p>
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 
@@ -270,7 +270,7 @@
                        	<div class="row">
                        		<div class="large-12 medium-12 small-12 columns">
                                 <p><strong>Venerdì, Sabato, Domenica</strong>: asporto con consumazione anche ai tavoli in esterno.
-                                <br><strong>Dalle 18:00 alle 21:30.</strong></p>
+                                <br><strong>Dalle 18:00 alle 22:30</strong></p>
                             </div>
                        	</div>
                  	</li>
