--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
                        		<div class="large-12 medium-12 small-12 columns">
                                 <p><strong>Venerdì, Sabato, Domenica</strong>: asporto con consumazione anche ai tavoli in esterno.
                                 <br><strong>Dalle 18:00 alle 22:30</strong></p>
+                                <p>Dal 1 Giugno aperti tutti i giorni dalle 19 alle 23</p>
                             </div>
                        	</div>
                  	</li>
