--- a/menu/index.html
+++ b/menu/index.html
@@ -793,15 +793,16 @@
                         <p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi prenotazione</a></p>
                     </li>
                     <li>
-                        <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
-                        <div class="row">
-                            <div class="large-12 medium-12 small-12 columns">
+                       	<h4 class="subheader">Orari</h4>
+                       	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
+                       	<div class="row">
+                       		<div class="large-12 medium-12 small-12 columns">
                                 <p><strong>Venerdì, Sabato, Domenica</strong>: asporto con consumazione anche ai tavoli in esterno.
                                 <br><strong>Dalle 18:00 alle 22:30</strong></p>
+                                <p>Dal 1 Giugno aperti tutti i giorni dalle 19 alle 23</p>
                             </div>
-                        </div>
-                    </li>
+                       	</div>
+                 	</li>
                     <li>
                         <h4 class="subheader">Dove siamo</h4>
                         <p>
