--- a/menu/index.html
+++ b/menu/index.html
@@ -310,7 +310,8 @@
                             </li>
                             <li>
                                 <h3>Blondie <span class="price">5</span></h3>
-                                <p>Brownie con nocciole. Servito con mousse di crema chantilly</p>
+                                <p>Brownie con nocciole.</p>
+                                <!-- Servito con mousse di crema chantilly -->
                             </li>
                             <!-- <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
