--- a/index.html
+++ b/index.html
@@ -104,22 +104,18 @@
 				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-				<!-- <p>Siamo aperti solo per gli asporti. Per ritirare gli asporti è obbligatorio l'utilizzo della mascherina.</p>
-				<p>Colonnine con gel igienizzante sono dislocate all'entrata e nei pressi dell'area di ritiro dell'asporto.</p>
-				<p>Prendiamo molto seriamente il nostro lavoro e la nostra responsabilità sociale.</p>
-				<p>Prestiamo tutte le attenzioni possibili all'emergenza sanitaria in corso con un insieme di regole che ci permetteranno di passare una serata rilassata e serena.</p> -->
 				<p>Per venire a Ca' Vecchia Beerstrot assicuriamoci di leggere e condividere il regolamento Covid</p>
 				<a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a>
 			</div>
 		</div>
 	</div>
 	<div class="panel-home-n">
-		<!-- <div class="row">
+		<div class="row">
 			<div class="medium-12 large-12 columns panel clearfix">
 				<h1>Chiusura festività</h1>
 				<p>Chiusi fino al 2 Gennaio compreso.<br> Aperti Venerdì 3, Sabato 4, Domenica 5 e Lunedì 6 Gennaio.</p>
 			</div>
-		</div> -->
+		</div>
 		<div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
@@ -133,37 +129,18 @@
 				<!-- <p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 22:30</strong></p> -->
 				<!-- <p>Prendi l'asporto e consumalo ai tavoli in esterno. <br>Ordina una birra, un bicchiere di vino o uno spritz e goditi i fantastici tramonti di Ca' Vecchia.</p> -->
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
-
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-				<!-- <h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
-				<p>Aperto dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p> -->
-                <!-- <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Prenota</a></span> -->
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
-				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
-				<!-- <p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 22:30</strong></p> -->
-				<!-- <p>Venerdì, Sabato e Domenica: dalle 18:00 alle 21:30</p> -->
-				<!-- <p>Siamo chiusi per Pasqua (4 Aprile) e Pasquetta (5 Aprile)</p> -->
-				<!-- <p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
-				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
-				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
+				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
                 <span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
 			</div>
 		</div>
-		<!-- <div class="row">
-			<div class="medium-12 large-12 columns">
-				<br>
-				<span class="hide-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
-				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
-				<span class="show-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
-			</div>
-		</div> -->
 	</div>
 	<div class="panel-home-2n">
 		<div class="row">
