--- a/menu/index.html
+++ b/menu/index.html
@@ -80,7 +80,7 @@
     </div> -->
     <div class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Menù <!-- <small>(Coperto 1,5)</small> --></h1>
+            <h1>Menù <small>(Coperto 1,5)</small></h1>
             <hr>
         </div>
     </div>
