--- a/menu/index.html
+++ b/menu/index.html
@@ -369,10 +369,10 @@
                             <h3>Mirabilia</h3>
                             <p>American Pale Ale 5,2% <br><em>Birrificio dei Castelli</em></p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
-                        </li>
+                        </li> -->
 		                <!-- <li>
                             <h3>Mazzu de Fiuri</h3>
                             <p>IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
@@ -381,6 +381,10 @@
                             <h3>Billycock</h3>
                             <p>Doppia New England IPA 7,8% <br><em>Birrificio MC-77</em></p>
                         </li> -->
+                        <li>
+                            <h3>From NZ to MC</h3>
+                            <p>IPA 6,2% <br><em>Birrificio MC-77</em></p>
+                        </li>
                         <li>
                             <h3>Velvet Suit</h3>
                             <p>New England IPA 6,5% <br><em>Birrificio MC-77</em></p>
