--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="https://www.beerstrot.it/prenota/"/>
-    <link rel="stylesheet" href="../css/app.css"/>
+    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -40,7 +40,7 @@
 <!-- inizio navbar con hamburger -->
     <nav>
         <ul class="menu1" id="hamburger">
-            <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="../asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
+            <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
             <li class="item button"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
             <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
@@ -304,7 +304,7 @@
     <script src="https://npmcdn.com/flatpickr/dist/l10n/it.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
     <script src="https://www.beerstrot.it/js/prenota.min.js"></script>
-    <script src="../js/navbar.js"></script>
+    <script src="https://www.beerstrot.it/js/navbar.js"></script>
 <!-- inizio modale messaggio locale completo -->
     <div id="myModal" class="reveal-modal medium" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <div class="row">
