--- a/asporto/index.html
+++ b/asporto/index.html
@@ -49,7 +49,7 @@
         <ul class="menu1" id="hamburger">
             <li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a>
             </li>
-            <li class="item button"><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+            <li class="item button"><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></li>
             <li class="item"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
             <li class="item"><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
             <li class="item"><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
@@ -426,7 +426,7 @@
 		<div class="small-12 medium-12 large-12 columns">
 			<p class="links">
 				<a href="https://www.beerstrot.it">Home</a>
-				<a href="https://www.beerstrot.it/prenota/">Prenota</a>
+				<a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a>
 				<a href="https://www.beerstrot.it/menu/">Menù</a>
 				<a href="https://www.beerstrot.it/asporto/">Asporto</a>
 				<a href="https://www.beerstrot.it/contatti/">Contatti</a>
