--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -55,9 +55,6 @@
         <div class="grid-x grid-margin-x grid-margin-y">
             <div class="small-12 cell">
                 <h1 class="first-paragraph-no-hero" id="ttitle">Riserva un Tavolo</h1>
-                <div class="callout success">
-                    <p>Il martedì non serviamo sushi.</p>
-                </div>
             </div>
         </div>
     </header>
@@ -129,6 +126,11 @@
         <div class="grid-container">
             <form id="form" novalidate="novalidate" autocomplete="on">
                 <div class="grid-x grid-margin-x">
+                    <div class="small-12 cell">
+                        <div class="callout success">
+                            <p>Il martedì non serviamo sushi.</p>
+                        </div>
+                    </div>
                     <div class="small-12 cell">
                          <p>Includi in <strong>Quante persone*</strong> anche eventuali seggioloni. Esempio: 4 persone e 2 seggioloni, seleziona 6.</p>
                          <p><strong>* </strong> Indica un campo obbligatorio.</p>
