--- a/menu.html
+++ b/menu.html
@@ -64,7 +64,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-                    <li><a href="#aperitivo">Aperitivo</a></li>
+                    <!-- <li><a href="#aperitivo">Aperitivo</a></li> -->
     				<li><a href="#perStuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#secondi">Secondi</a></li>
@@ -81,7 +81,7 @@
     </div>
     <div id="menupage-text">
     	<div class="grid-container">
-            <section class="grid-x grid-margin-x grid-margin-y" id="aperitivo" data-magellan-target="aperitivo">
+            <!-- <section class="grid-x grid-margin-x grid-margin-y" id="aperitivo" data-magellan-target="aperitivo">
                 <div class="small-12 cell callout secondary">
                     <h2>Aperitivo</h2>
                     <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
