--- a/menu.html
+++ b/menu.html
@@ -152,7 +152,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/TriangolidiVerdure_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Triangoli di Verdure">
@@ -160,7 +160,7 @@
     								<p>Carote, peperoni, piselli, mais e cipolle avvolte da una croccante panatura dorata. Serviti con salsa aioli (6 pezzi).<span class=""><br><small>Allergeni: Glutine, Sedano, Senape</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
