--- a/menu.html
+++ b/menu.html
@@ -152,7 +152,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/TriangolidiVerdure_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Triangoli di Verdure">
@@ -160,7 +160,7 @@
     								<p>Carote, peperoni, piselli, mais e cipolle avvolte da una croccante panatura dorata. Serviti con salsa aioli (6 pezzi).<span class=""><br><small>Allergeni: Glutine, Sedano, Senape</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -658,14 +658,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Extrema Ratio<span class="price ">4 | 6,5 | 13</span></h3>
     								<p class="">Doppia IPA 7,4%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     				</div>
     			</div>
     			<div class="small-12 cell">
