--- a/menu.html
+++ b/menu.html
@@ -116,7 +116,7 @@
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/BocconcinidiPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Bocconcini di Pollo">
@@ -124,7 +124,7 @@
     								<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa (10 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
